Bug 259991 - Akonadi crash when fetching mails
Summary: Akonadi crash when fetching mails
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: IMAP resource (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Kevin Ottens
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-15 20:32 UTC by Rolf Eike Beer
Modified: 2010-12-17 21:51 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rolf Eike Beer 2010-12-15 20:32:27 UTC
Application: akonadi_imap_resource (0.1)
KDE Platform Version: 4.5.86 (4.6 >= 20101210) "release 8"
Qt Version: 4.7.1
Operating System: Linux 2.6.34.7-0.5-desktop i686
Distribution: "openSUSE 11.3 (i586)"

-- Information about the crash:
I ordered KMail to refresh all my dIMAP accounts. While it was still fetching I tried to read one of the new mails. The message was marked as read but the content did not show up. Instead akonadi crashed.

-- Backtrace:
Application: Akonadi Resource (akonadi_imap_resource), signal: Segmentation fault
[Current thread is 1 (Thread 0xb4a50710 (LWP 8432))]

Thread 2 (Thread 0xb20c3b70 (LWP 11379)):
#0  0xb55de22b in clock_gettime () from /lib/librt.so.1
#1  0xb725a265 in do_gettime () at tools/qelapsedtimer_unix.cpp:123
#2  qt_gettime () at tools/qelapsedtimer_unix.cpp:140
#3  0xb732dd26 in updateCurrentTime (this=0x82c0abc, tm=...) at kernel/qeventdispatcher_unix.cpp:339
#4  QTimerInfoList::timerWait (this=0x82c0abc, tm=...) at kernel/qeventdispatcher_unix.cpp:442
#5  0xb732c55b in timerSourcePrepareHelper (src=<value optimized out>, timeout=0xb20c313c) at kernel/qeventdispatcher_glib.cpp:136
#6  0xb732c5fd in timerSourcePrepare (source=0x82c0a88, timeout=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:169
#7  0xb55320c0 in g_main_context_prepare () from /usr/lib/libglib-2.0.so.0
#8  0xb5532f22 in ?? () from /usr/lib/libglib-2.0.so.0
#9  0xb553360e in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#10 0xb732cda7 in QEventDispatcherGlib::processEvents (this=0x82c0b28, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#11 0xb72fd89d in QEventLoop::processEvents (this=0xb20c32d0, flags=...) at kernel/qeventloop.cpp:149
#12 0xb72fdac9 in QEventLoop::exec (this=0xb20c32d0, flags=...) at kernel/qeventloop.cpp:201
#13 0xb71fc7a9 in QThread::exec (this=0x82d9390) at thread/qthread.cpp:490
#14 0xb6582c90 in KIMAP::SessionThread::run (this=0x82d9390) at /usr/src/debug/kdepimlibs-4.5.86svn1205247/kimap/sessionthread.cpp:166
#15 0xb71ff39a in QThreadPrivate::start (arg=0x82d9390) at thread/qthread_unix.cpp:285
#16 0xb5697b25 in start_thread () from /lib/libpthread.so.0
#17 0xb57db46e in clone () from /lib/libc.so.6

Thread 1 (Thread 0xb4a50710 (LWP 8432)):
[KCrash Handler]
#7  0x080a0f34 in UidNextAttribute::uidNext (this=0x0) at /usr/src/debug/kdepim-runtime-4.5.86svn1205247/resources/imap/uidnextattribute.cpp:37
#8  0x0808b03e in MoveItemTask::onPreSearchSelectDone (this=0x85eb300, job=0xbfa95580) at /usr/src/debug/kdepim-runtime-4.5.86svn1205247/resources/imap/moveitemtask.cpp:206
#9  0x0808cb7d in MoveItemTask::qt_metacall (this=0x85eb300, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0xbfa956a8)
    at /usr/src/debug/kdepim-runtime-4.5.86svn1205247/build/resources/imap/moveitemtask.moc:82
#10 0xb7304e5d in QMetaObject::metacall (object=0x85eb300, cl=QMetaObject::InvokeMetaMethod, idx=10, argv=0xbfa956a8) at kernel/qmetaobject.cpp:237
#11 0xb7314ffc in QMetaObject::activate (sender=0x84a53c8, m=0xb5c4d548, local_signal_index=3, argv=0xbfa956a8) at kernel/qobject.cpp:3272
#12 0xb5a9de25 in KJob::result(KJob*) () from /usr/lib/libkdecore.so.5
#13 0xb5a9de78 in KJob::emitResult() () from /usr/lib/libkdecore.so.5
#14 0xb6569563 in KIMAP::Job::handleErrorReplies (this=0x84a53c8, response=...) at /usr/src/debug/kdepimlibs-4.5.86svn1205247/kimap/job.cpp:86
#15 0xb657e5a5 in KIMAP::SelectJob::handleResponse (this=0x84a53c8, response=...) at /usr/src/debug/kdepimlibs-4.5.86svn1205247/kimap/selectjob.cpp:145
#16 0xb6580a19 in KIMAP::SessionPrivate::responseReceived (this=0x82d91e8, response=...) at /usr/src/debug/kdepimlibs-4.5.86svn1205247/kimap/session.cpp:263
#17 0xb6581be6 in KIMAP::Session::qt_metacall (this=0x82d9020, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x84d60c8)
    at /usr/src/debug/kdepimlibs-4.5.86svn1205247/build/kimap/session.moc:106
#18 0xb7304e5d in QMetaObject::metacall (object=0x82d9020, cl=QMetaObject::InvokeMetaMethod, idx=9, argv=0x84d60c8) at kernel/qmetaobject.cpp:237
#19 0xb730f945 in QMetaCallEvent::placeMetaCall (this=0x848f628, object=0x82d9020) at kernel/qobject.cpp:534
#20 0xb7313b7f in QObject::event (this=0x82d9020, e=0x848f628) at kernel/qobject.cpp:1211
#21 0xb6816414 in QApplicationPrivate::notify_helper (this=0x80e56f0, receiver=0x82d9020, e=0x848f628) at kernel/qapplication.cpp:4445
#22 0xb681f137 in QApplication::notify (this=0xbfa96100, receiver=0x82d9020, e=0x848f628) at kernel/qapplication.cpp:3845
#23 0xb5e415b1 in KApplication::notify (this=0xbfa96100, receiver=0x82d9020, event=0x848f628) at /usr/src/debug/kdelibs-4.5.86svn1205247/kdeui/kernel/kapplication.cpp:311
#24 0xb72fe5be in QCoreApplication::notifyInternal (this=0xbfa96100, receiver=0x82d9020, event=0x848f628) at kernel/qcoreapplication.cpp:732
#25 0xb730234c in sendEvent (receiver=0x0, event_type=0, data=0x80cf770) at kernel/qcoreapplication.h:215
#26 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x80cf770) at kernel/qcoreapplication.cpp:1373
#27 0xb730249c in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1266
#28 0xb732cbd4 in sendPostedEvents (s=0x80e7b20) at kernel/qcoreapplication.h:220
#29 postEventSourceDispatch (s=0x80e7b20) at kernel/qeventdispatcher_glib.cpp:277
#30 0xb5532b49 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#31 0xb5533350 in ?? () from /usr/lib/libglib-2.0.so.0
#32 0xb553360e in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#33 0xb732cd5b in QEventDispatcherGlib::processEvents (this=0x80e56d0, flags=...) at kernel/qeventdispatcher_glib.cpp:422
#34 0xb68cc9aa in QGuiEventDispatcherGlib::processEvents (this=0x80e56d0, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#35 0xb72fd89d in QEventLoop::processEvents (this=0xbfa96074, flags=...) at kernel/qeventloop.cpp:149
#36 0xb72fdac9 in QEventLoop::exec (this=0xbfa96074, flags=...) at kernel/qeventloop.cpp:201
#37 0xb7302570 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1009
#38 0xb6814114 in QApplication::exec () at kernel/qapplication.cpp:3719
#39 0xb75f1c44 in Akonadi::ResourceBase::init (r=0x80e7a00) at /usr/src/debug/kdepimlibs-4.5.86svn1205247/akonadi/resourcebase.cpp:283
#40 0x080638c3 in init<ImapResource> (argc=-1598591532, argv=0x90b76df4) at /usr/include/akonadi/resourcebase.h:188
#41 main (argc=-1598591532, argv=0x90b76df4) at /usr/src/debug/kdepim-runtime-4.5.86svn1205247/resources/imap/imapresource.cpp:580

Reported using DrKonqi
Comment 1 Rolf Eike Beer 2010-12-15 21:49:28 UTC
I get this now _always_. On every start of KMail I get this backtrace one I entered my KWallet passord for akonadi. It then crashes within seconds, then the whole game starts again from the beginning. At the end I can't sync my mail _at_ _all_.
Comment 2 Till Adam 2010-12-17 21:51:06 UTC
SVN commit 1207395 by tilladam:

Don't crash when the target collection has no next uid attribute.

BUG: 259991

 M  +5 -0      moveitemtask.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1207395