Don't crash when the target collection has no next uid attribute.

BUG: 259991

svn path=/trunk/KDE/kdepim/runtime/; revision=1207395