resources/imap/moveitemtask.cpp
@@ -203,6 +203,11 @@ void MoveItemTask::onPreSearchSelectDone( KJob *job )
     search->addSearchCriteria( KIMAP::SearchJob::New );
 
     UidNextAttribute *uidNext = targetCollection().attribute<UidNextAttribute>();
+    if ( !uidNext ){
+      cancelTask( i18n("Could not determine the UID for the newly created message on the server") );
+      search->deleteLater();
+      return;
+    }
     KIMAP::ImapInterval interval( uidNext->uidNext() );
 
     search->addSearchCriteria( KIMAP::SearchJob::Uid, interval.toImapSequence() );
